--- a/Week1/style3_header.css
+++ b/Week1/style3_header.css
@@ -25,9 +25,10 @@ html {
 }
 
 .header {
-    margin-top: 7px;
+    margin-top: 5px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 0;
 }
 
 .logo-img {
@@ -71,7 +72,7 @@ html {
 }
 
 .nav {
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .nav-list {
@@ -80,7 +81,7 @@ html {
 }
 
 .nav-item {
-    padding: 9px 14px;
+    padding: 7px 14px;
     border-bottom: 5px solid transparent;
     font-size: 15px;
     font-weight: 600;
@@ -93,8 +94,8 @@ html {
 }
 
 .title {
-    margin-bottom: 20px;
-    padding: 8px 15px;
+    margin-bottom: 10px;
+    padding: 5px 20px;
     border-radius: 4px;
     background-color: #e8e8e8;
 }
